--- a/main.css
+++ b/main.css
@@ -50,7 +50,8 @@ body {
 h1 {
   font-size: 4em;
   color: black;
-  line-height: 20%;
+  line-height: 100%;
+  margin: 0.2em;
   font-weight: 300;
 }
 
